:bug: Increase z-index of burger-menu (#3432)
To the same value as the recently increased z-index of header #3428

--- a/frontend/scss/components/organisms/burger-menu.scss
+++ b/frontend/scss/components/organisms/burger-menu.scss
@@ -36,7 +36,7 @@
   /* The following elements are not inside the burger-menu itself */
   &-label {
     position: fixed;
-    z-index: 17;
+    z-index: 1001;
     top: 12px;
     right: 20px;
     cursor: pointer;
